@@ -129,7 +129,8 @@
     "always": "Always",
     "compare": "Compare",
     "discount": "Discount",
-    "discountabs": "Absolute Discount",
+    "discountper": "Discount (Percentage)",
+    "discountabs": "Discount (Amount)",
     "rating_details": "See rating details",
     "drops_worth_avg": "Worth Approximately",
     "using_store_return": "Click here to go back to the __base__ store.",
